Fix footer spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -430,7 +430,7 @@ span.newthought {
 /* BEGIN Footer */
 
 .site-footer-container {
-  width: 87.5%;
+  width: 100%;
 }
 
 .site-footer {
@@ -453,12 +453,6 @@ span.newthought {
   margin: 0;
   font-size: 1rem;
   width: 100%;
-}
-
-@media (max-width: 900px) {
-  .site-footer-container {
-    width: 100%;
-  }
 }
 
 .social-icons {
